apps/desktop/src/app/upload/select-files/select-files.component.scss
@import 'variables';

.select-files {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.header {
  flex: 0 0 auto;
}

.body {
  flex: 1 1 0;
  overflow-y: auto;
}

.footer {
  flex: 0 0 auto;
  text-align: center;
  padding-top: rhythm(4);
}

.search-form {
  display: flex;
  width: 100%;
  justify-content: flex-end;
  margin-bottom: rhythm(8);

  pa-input ::ng-deep .pa-field-control {
    height: rhythm(4);
  }

  pa-button {
    margin-left: rhythm(0.5);
  }
}

table {
  width: calc(100% - #{rhythm(2)});
  border-spacing: 0;
  border-top: 2px solid $color-neutral-strong;
}

td {
  height: rhythm(3);
  border-bottom: 1px solid $color-neutral-strong;
}

